Działa baza danych

--- a/SKLEPSQL/Pages/CartDel.cshtml
+++ b/SKLEPSQL/Pages/CartDel.cshtml
@@ -10,7 +10,7 @@
 </head>
 <body>
     <form method="post" class="form-horizontal">
-        <input asp-for="prod.id" type="hidden" disabled/> 
+        <input asp-for="product.id" type="hidden" disabled/> 
       
     </form>
 </body>
