--- a/SKLEPSQL/Pages/Details.cshtml
+++ b/SKLEPSQL/Pages/Details.cshtml
@@ -11,9 +11,9 @@
 </head>
 <body>
     <form method="post" class="form-horizontal">
-        <input asp-for="prod.id" type="hidden" disabled/> 
-        <div>Nazwa: @Model.prod.name</div>
-        <div>Cena:  @Model.prod.price</div></br>
+        <input asp-for="product.id" type="hidden" disabled/> 
+        <div>Nazwa: @Model.product.name</div>
+        <div>Cena:  @Model.product.price</div></br>
         
         <button type="submit"  class="btn btn btn-primary">Dodaj do Koszyka</button>
     </form>
