--- a/SKLEPSQL/Pages/Edit.cshtml
+++ b/SKLEPSQL/Pages/Edit.cshtml
@@ -8,28 +8,26 @@
 <head>
     <meta charset="utf-8" />
     <title></title>
-    
-    
 </head>
 <body>
     <h2>Edycja produktu</h2>
     <br /><br />
      <div class="container">
         <form class="form-horizontal" method="post">
-           <input asp-for="prod.id" type="hidden" disabled/>
+           <input asp-for="Product.id" type="hidden" disabled/>
             <div class="form-group">
-                <label asp-for="prod.name" class="control-label col-sm2"></label>
+                <label asp-for="Product.name" class="control-label col-sm2"></label>
                 <div class="col-sm-6">
-                    <input asp-for="prod.name" class="form-control">
+                    <input asp-for="Product.name" class="form-control">
                 </div>
-              <span asp-validation-for="prod.name" class="text-danger"></span><br />
+              <span asp-validation-for="Product.name" class="text-danger"></span><br />
             </div>
             <div class="form-group">
-                <label asp-for="prod.price" class="control-label col-sm2"></label>
+                <label asp-for="Product.price" class="control-label col-sm2"></label>
                 <div class="col-sm-6">
-                    <input asp-for="prod.price" class="form-control">
+                    <input asp-for="Product.price" class="form-control">
                 </div>
-                <span asp-validation-for="prod.price" class="text-danger"></span><br />
+                <span asp-validation-for="Product.price" class="text-danger"></span><br />
             </div>
             <div class="form-group">
                 <div class="col-sm-offset-2 col-sm-10">
