--- a/SKLEPSQL/Pages/Cart.cshtml
+++ b/SKLEPSQL/Pages/Cart.cshtml
@@ -37,9 +37,8 @@
          <th></th>
          <th></th>
          <td>SUMA:</td>
-         <td>@Model.suma</td>
+         <td>@Model.suma zl</td>
          </tbody>
-        
     </table>
     <form method="post" class="form-horizontal">
         <button type="submit"  class="btn btn btn-primary">Wyczyść Koszyk</button>
